--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
-    "dev": "rollup -c --w --f iife",
-    "build": "rollup -c -o --f iife"
+    "start": "node server.js",
+    "dev": "parcel watch src/js/main.js",
+    "build": "parcel build src/js/main.js"
   },
-  "author": "",
+  "author": "Georgi Nikolov",
   "license": "ISC",
   "dependencies": {
     "@hughsk/fulltilt": "^0.7.1",
@@ -19,17 +19,11 @@
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
-    "babelrc-rollup": "^3.0.0",
-    "babel-core": "^6.26.0",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-es2015": "^6.24.1",
+    "glslify-bundle": "^5.1.1",
+    "glslify-deps": "^1.3.2",
     "nodemon": "^1.17.3",
+    "parcel": "^1.12.4",
     "pug": "^2.0.3",
-    "rollup-plugin-babel": "^3.0.3",
-    "rollup-plugin-commonjs": "^9.1.0",
-    "rollup-plugin-glsl": "^1.2.0",
-    "rollup-plugin-node-resolve": "^3.3.0",
-    "rollup-plugin-scss": "^0.4.0",
-    "rollup-watch": "^4.3.1"
+    "sass": "^1.29.0"
   }
 }
